--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -75,7 +75,7 @@ The following packages will be downloaded:
     fontconfig-2.14.0          |       h8e229c2_0         305 KB  conda-forge
     fonts-conda-ecosystem-1    |                0           4 KB  conda-forge
     fonts-conda-forge-1        |                0           4 KB  conda-forge
-    fonttools-4.37.0           |   py39hb9d737c_0         1.9 MB  conda-forge
+    fonttools-4.37.0           |  py310h5764c6d_0         1.9 MB  conda-forge
     freetype-2.12.1            |       hca18f0e_0         884 KB  conda-forge
     gettext-0.19.8.1           |    h73d1719_1008         3.6 MB  conda-forge
     glib-2.72.1                |       h6239696_0         443 KB  conda-forge
@@ -86,7 +86,7 @@ The following packages will be downloaded:
     jack-1.9.18                |    h8c3723f_1002         643 KB  conda-forge
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
     keyutils-1.6.1             |       h166bdaf_0         115 KB  conda-forge
-    kiwisolver-1.4.4           |   py39hf939315_0          76 KB  conda-forge
+    kiwisolver-1.4.4           |  py310hbf28c38_0          76 KB  conda-forge
     krb5-1.19.3                |       h3790be6_0         1.4 MB  conda-forge
     lcms2-2.12                 |       hddcbb42_0         443 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
@@ -118,8 +118,8 @@ The following packages will be downloaded:
     libxcb-1.13                |    h7f98852_1004         391 KB  conda-forge
     libxkbcommon-1.0.3         |       he3ba5ed_0         581 KB  conda-forge
     libxml2-2.9.14             |       h22db469_4         771 KB  conda-forge
-    matplotlib-3.5.3           |   py39hf3d152e_1           7 KB  conda-forge
-    matplotlib-base-3.5.3      |   py39h700656a_1         7.4 MB  conda-forge
+    matplotlib-3.5.3           |  py310hff52083_1           7 KB  conda-forge
+    matplotlib-base-3.5.3      |  py310h5701ce4_1         7.5 MB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
     mysql-common-8.0.30        |       haf5c9bc_0         1.9 MB  conda-forge
     mysql-libs-8.0.30          |       h28c427c_0         1.9 MB  conda-forge
@@ -128,20 +128,21 @@ The following packages will be downloaded:
     openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
     pcre-8.45                  |       h9c3ff4c_0         253 KB  conda-forge
-    pillow-9.2.0               |   py39hd5dbb17_2        44.9 MB  conda-forge
+    pillow-9.2.0               |  py310hbd86126_2        45.0 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     portaudio-19.6.0           |       h57a0ea0_5         131 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
     pulseaudio-14.0            |       h7f54b18_8         1.7 MB  conda-forge
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
-    pyqt-5.15.7                |   py39h18e9c17_0         6.2 MB  conda-forge
-    pyqt5-sip-12.11.0          |   py39h5a03fae_0          86 KB  conda-forge
+    pyqt-5.15.7                |  py310h29803b5_0         6.2 MB  conda-forge
+    pyqt5-sip-12.11.0          |  py310hd8f1fbe_0          86 KB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
     qt-main-5.15.4             |       ha5833f6_2        61.5 MB  conda-forge
-    sip-6.6.2                  |   py39h5a03fae_0         495 KB  conda-forge
+    sip-6.6.2                  |  py310hd8f1fbe_0         522 KB  conda-forge
+    sqlite-3.39.2              |       h4ff8645_1         788 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
-    tornado-6.2                |   py39hb9d737c_0         658 KB  conda-forge
-    unicodedata2-14.0.0        |   py39hb9d737c_1         498 KB  conda-forge
+    tornado-6.2                |  py310h5764c6d_0         664 KB  conda-forge
+    unicodedata2-14.0.0        |  py310h5764c6d_1         496 KB  conda-forge
     xcb-util-0.4.0             |       h166bdaf_0          20 KB  conda-forge
     xcb-util-image-0.4.0       |       h166bdaf_0          24 KB  conda-forge
     xcb-util-keysyms-0.4.0     |       h166bdaf_0          12 KB  conda-forge
@@ -151,7 +152,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       259.6 MB
+                                           Total:       260.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -170,7 +171,7 @@ The following NEW packages will be INSTALLED:
   fontconfig         conda-forge/linux-64::fontconfig-2.14.0-h8e229c2_0
   fonts-conda-ecosy~ conda-forge/noarch::fonts-conda-ecosystem-1-0
   fonts-conda-forge  conda-forge/noarch::fonts-conda-forge-1-0
-  fonttools          conda-forge/linux-64::fonttools-4.37.0-py39hb9d737c_0
+  fonttools          conda-forge/linux-64::fonttools-4.37.0-py310h5764c6d_0
   freetype           conda-forge/linux-64::freetype-2.12.1-hca18f0e_0
   gettext            conda-forge/linux-64::gettext-0.19.8.1-h73d1719_1008
   glib               conda-forge/linux-64::glib-2.72.1-h6239696_0
@@ -181,7 +182,7 @@ The following NEW packages will be INSTALLED:
   jack               conda-forge/linux-64::jack-1.9.18-h8c3723f_1002
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2
   keyutils           conda-forge/linux-64::keyutils-1.6.1-h166bdaf_0
-  kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py39hf939315_0
+  kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_0
   krb5               conda-forge/linux-64::krb5-1.19.3-h3790be6_0
   lcms2              conda-forge/linux-64::lcms2-2.12-hddcbb42_0
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0
@@ -213,8 +214,8 @@ The following NEW packages will be INSTALLED:
   libxcb             conda-forge/linux-64::libxcb-1.13-h7f98852_1004
   libxkbcommon       conda-forge/linux-64::libxkbcommon-1.0.3-he3ba5ed_0
   libxml2            conda-forge/linux-64::libxml2-2.9.14-h22db469_4
-  matplotlib         conda-forge/linux-64::matplotlib-3.5.3-py39hf3d152e_1
-  matplotlib-base    conda-forge/linux-64::matplotlib-base-3.5.3-py39h700656a_1
+  matplotlib         conda-forge/linux-64::matplotlib-3.5.3-py310hff52083_1
+  matplotlib-base    conda-forge/linux-64::matplotlib-base-3.5.3-py310h5701ce4_1
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0
   mysql-common       conda-forge/linux-64::mysql-common-8.0.30-haf5c9bc_0
   mysql-libs         conda-forge/linux-64::mysql-libs-8.0.30-h28c427c_0
@@ -223,20 +224,21 @@ The following NEW packages will be INSTALLED:
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-h7d73246_1
   packaging          conda-forge/noarch::packaging-21.3-pyhd8ed1ab_0
   pcre               conda-forge/linux-64::pcre-8.45-h9c3ff4c_0
-  pillow             conda-forge/linux-64::pillow-9.2.0-py39hd5dbb17_2
+  pillow             conda-forge/linux-64::pillow-9.2.0-py310hbd86126_2
   ply                conda-forge/noarch::ply-3.11-py_1
   portaudio          conda-forge/linux-64::portaudio-19.6.0-h57a0ea0_5
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
   pulseaudio         conda-forge/linux-64::pulseaudio-14.0-h7f54b18_8
   pyparsing          conda-forge/noarch::pyparsing-3.0.9-pyhd8ed1ab_0
-  pyqt               conda-forge/linux-64::pyqt-5.15.7-py39h18e9c17_0
-  pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py39h5a03fae_0
+  pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_0
+  pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_0
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
   qt-main            conda-forge/linux-64::qt-main-5.15.4-ha5833f6_2
-  sip                conda-forge/linux-64::sip-6.6.2-py39h5a03fae_0
+  sip                conda-forge/linux-64::sip-6.6.2-py310hd8f1fbe_0
+  sqlite             conda-forge/linux-64::sqlite-3.39.2-h4ff8645_1
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
-  tornado            conda-forge/linux-64::tornado-6.2-py39hb9d737c_0
-  unicodedata2       conda-forge/linux-64::unicodedata2-14.0.0-py39hb9d737c_1
+  tornado            conda-forge/linux-64::tornado-6.2-py310h5764c6d_0
+  unicodedata2       conda-forge/linux-64::unicodedata2-14.0.0-py310h5764c6d_1
   xcb-util           conda-forge/linux-64::xcb-util-0.4.0-h166bdaf_0
   xcb-util-image     conda-forge/linux-64::xcb-util-image-0.4.0-h166bdaf_0
   xcb-util-keysyms   conda-forge/linux-64::xcb-util-keysyms-0.4.0-h166bdaf_0
@@ -294,4 +296,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 24 August 2022 12:23">Wednesday 24 August 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 24 August 2022 18:26">Wednesday 24 August 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
