--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -110,6 +110,7 @@ The following packages will be downloaded:
     libpng-1.6.37              |       h753d276_4         371 KB  conda-forge
     libpq-14.5                 |       hd77ab85_0         3.0 MB  conda-forge
     libsndfile-1.0.31          |       h9c3ff4c_1         602 KB  conda-forge
+    libsqlite-3.39.3           |       h753d276_0         789 KB  conda-forge
     libtiff-4.4.0              |       h0e0dad5_3         642 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-249               |       h166bdaf_4         109 KB  conda-forge
@@ -139,7 +140,7 @@ The following packages will be downloaded:
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
     qt-main-5.15.4             |       ha5833f6_2        61.5 MB  conda-forge
     sip-6.6.2                  |  py310hd8f1fbe_0         522 KB  conda-forge
-    sqlite-3.39.2              |       h4ff8645_1         788 KB  conda-forge
+    sqlite-3.39.3              |       h4ff8645_0         789 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
     tornado-6.2                |  py310h5764c6d_0         664 KB  conda-forge
     unicodedata2-14.0.0        |  py310h5764c6d_1         496 KB  conda-forge
@@ -152,7 +153,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       256.2 MB
+                                           Total:       257.0 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -235,7 +236,7 @@ The following NEW packages will be INSTALLED:
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
   qt-main            conda-forge/linux-64::qt-main-5.15.4-ha5833f6_2
   sip                conda-forge/linux-64::sip-6.6.2-py310hd8f1fbe_0
-  sqlite             conda-forge/linux-64::sqlite-3.39.2-h4ff8645_1
+  sqlite             conda-forge/linux-64::sqlite-3.39.3-h4ff8645_0
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
   tornado            conda-forge/linux-64::tornado-6.2-py310h5764c6d_0
   unicodedata2       conda-forge/linux-64::unicodedata2-14.0.0-py310h5764c6d_1
@@ -247,6 +248,10 @@ The following NEW packages will be INSTALLED:
   xorg-libxau        conda-forge/linux-64::xorg-libxau-1.0.9-h7f98852_0
   xorg-libxdmcp      conda-forge/linux-64::xorg-libxdmcp-1.1.3-h7f98852_0
   zstd               conda-forge/linux-64::zstd-1.5.2-h6239696_4
+
+The following packages will be UPDATED:
+
+  libsqlite                               3.39.2-h753d276_1 --&gt; 3.39.3-h753d276_0
 
 
 Preparing transaction: ...working... done
@@ -296,4 +301,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 5 September 2022 12:24">Monday 5 September 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 5 September 2022 18:17">Monday 5 September 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
