--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -107,7 +107,7 @@ The following packages will be downloaded:
     libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
     libflac-1.3.4              |       h27087fc_0         474 KB  conda-forge
     libglib-2.72.1             |       h2d90d5f_0         3.1 MB  conda-forge
-    libiconv-1.16              |       h516909a_0         1.4 MB  conda-forge
+    libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
     libllvm14-14.0.6           |       he0ac6c6_0        35.2 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
@@ -121,7 +121,7 @@ The following packages will be downloaded:
     libwebp-base-1.2.4         |       h166bdaf_0         404 KB  conda-forge
     libxcb-1.13                |    h7f98852_1004         391 KB  conda-forge
     libxkbcommon-1.0.3         |       he3ba5ed_0         581 KB  conda-forge
-    libxml2-2.9.14             |       h22db469_4         771 KB  conda-forge
+    libxml2-2.10.2             |       h4c7fe37_1         727 KB  conda-forge
     matplotlib-3.6.0           |  py310hff52083_0           7 KB  conda-forge
     matplotlib-base-3.6.0      |  py310h8d5ebf3_0         7.5 MB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
@@ -204,7 +204,7 @@ The following NEW packages will be INSTALLED:
   libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4
   libflac            conda-forge/linux-64::libflac-1.3.4-h27087fc_0
   libglib            conda-forge/linux-64::libglib-2.72.1-h2d90d5f_0
-  libiconv           conda-forge/linux-64::libiconv-1.16-h516909a_0
+  libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0
   libllvm14          conda-forge/linux-64::libllvm14-14.0.6-he0ac6c6_0
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
@@ -218,7 +218,7 @@ The following NEW packages will be INSTALLED:
   libwebp-base       conda-forge/linux-64::libwebp-base-1.2.4-h166bdaf_0
   libxcb             conda-forge/linux-64::libxcb-1.13-h7f98852_1004
   libxkbcommon       conda-forge/linux-64::libxkbcommon-1.0.3-he3ba5ed_0
-  libxml2            conda-forge/linux-64::libxml2-2.9.14-h22db469_4
+  libxml2            conda-forge/linux-64::libxml2-2.10.2-h4c7fe37_1
   matplotlib         conda-forge/linux-64::matplotlib-3.6.0-py310hff52083_0
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.6.0-py310h8d5ebf3_0
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0
@@ -301,4 +301,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 24 September 2022 18:20">Saturday 24 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 25 September 2022 01:02">Sunday 25 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
