--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -82,8 +82,8 @@ The following packages will be downloaded:
     fonttools-4.37.3           |  py310h5764c6d_0         1.9 MB  conda-forge
     freetype-2.12.1            |       hca18f0e_0         884 KB  conda-forge
     gettext-0.19.8.1           |    h27087fc_1009         3.6 MB  conda-forge
-    glib-2.72.1                |       h6239696_0         443 KB  conda-forge
-    glib-tools-2.72.1          |       h6239696_0         107 KB  conda-forge
+    glib-2.74.0                |       h6239696_0         438 KB  conda-forge
+    glib-tools-2.74.0          |       h6239696_0         108 KB  conda-forge
     gst-plugins-base-1.20.3    |       hf6a322e_0         2.8 MB  conda-forge
     gstreamer-1.20.3           |       hd4edc92_2         2.0 MB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
@@ -106,7 +106,7 @@ The following packages will be downloaded:
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
     libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
     libflac-1.3.4              |       h27087fc_0         474 KB  conda-forge
-    libglib-2.72.1             |       h2d90d5f_0         3.1 MB  conda-forge
+    libglib-2.74.0             |       h7a41b64_0         3.1 MB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
     libllvm14-14.0.6           |       he0ac6c6_0        35.2 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
@@ -131,7 +131,7 @@ The following packages will be downloaded:
     nss-3.78                   |       h2350873_0         2.1 MB  conda-forge
     openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
-    pcre-8.45                  |       h9c3ff4c_0         253 KB  conda-forge
+    pcre2-10.37                |       hc3806b6_1         1.1 MB  conda-forge
     pillow-9.2.0               |  py310hbd86126_2        45.0 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     portaudio-19.6.0           |       h57a0ea0_5         131 KB  conda-forge
@@ -156,7 +156,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       256.7 MB
+                                           Total:       257.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -179,8 +179,8 @@ The following NEW packages will be INSTALLED:
   fonttools          conda-forge/linux-64::fonttools-4.37.3-py310h5764c6d_0
   freetype           conda-forge/linux-64::freetype-2.12.1-hca18f0e_0
   gettext            conda-forge/linux-64::gettext-0.19.8.1-h27087fc_1009
-  glib               conda-forge/linux-64::glib-2.72.1-h6239696_0
-  glib-tools         conda-forge/linux-64::glib-tools-2.72.1-h6239696_0
+  glib               conda-forge/linux-64::glib-2.74.0-h6239696_0
+  glib-tools         conda-forge/linux-64::glib-tools-2.74.0-h6239696_0
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.20.3-hf6a322e_0
   gstreamer          conda-forge/linux-64::gstreamer-1.20.3-hd4edc92_2
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0
@@ -203,7 +203,7 @@ The following NEW packages will be INSTALLED:
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2
   libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4
   libflac            conda-forge/linux-64::libflac-1.3.4-h27087fc_0
-  libglib            conda-forge/linux-64::libglib-2.72.1-h2d90d5f_0
+  libglib            conda-forge/linux-64::libglib-2.74.0-h7a41b64_0
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0
   libllvm14          conda-forge/linux-64::libllvm14-14.0.6-he0ac6c6_0
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
@@ -228,7 +228,7 @@ The following NEW packages will be INSTALLED:
   nss                conda-forge/linux-64::nss-3.78-h2350873_0
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-h7d73246_1
   packaging          conda-forge/noarch::packaging-21.3-pyhd8ed1ab_0
-  pcre               conda-forge/linux-64::pcre-8.45-h9c3ff4c_0
+  pcre2              conda-forge/linux-64::pcre2-10.37-hc3806b6_1
   pillow             conda-forge/linux-64::pillow-9.2.0-py310hbd86126_2
   ply                conda-forge/noarch::ply-3.11-py_1
   portaudio          conda-forge/linux-64::portaudio-19.6.0-h57a0ea0_5
@@ -301,4 +301,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 26 September 2022 12:27">Monday 26 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 26 September 2022 18:23">Monday 26 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
